Updated to use cf-core.

--- a/_layouts/post-filters-form.html
+++ b/_layouts/post-filters-form.html
@@ -182,7 +182,7 @@
     </div> <!-- END .form-l__flush -->
 
     <div class="form-actions form-actions__right-on-med">
-        <input class="btn btn-warning btn-link form-actions_item js-form_clear"
+        <input class="btn btn__warning btn__link form-actions_item js-form_clear"
                type="button"
                value="Clear filters">
         <input class="btn form-actions_item"
