--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -47,6 +47,14 @@
   clear: both;
 }
 
+.wrapper {
+  max-width: 1170px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: relative;
+  clear: both;
+}
+
 .lt-ie9 .wrapper {
   max-width: 960px;
 }
@@ -266,8 +274,19 @@
   margin-right: -15px;
 }
 
+.content-l {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
 .content-l_col + .content-l_col {
   margin-top: 1.875em;
+}
+
+.content-l_col.content-l_col-1-2 + .content-l_col.content-l_col-1-2 {
+  margin-top: 0;
 }
 
 .content-l_col.content-l_col-1-2 + .content-l_col.content-l_col-1-2 {
@@ -279,6 +298,36 @@
 .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
 .content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
   margin-top: 0;
+}
+
+.content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+.content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+.content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
+  margin-top: 0;
+}
+
+.content-l_col-1 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-1 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-1 {
@@ -327,6 +376,29 @@
   behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
+.content-l_col-1-2 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+}
+
+.ie .content-l_col-1-2 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1-2 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
 .content-l_col-1-3 {
   display: inline-block;
   -webkit-box-sizing: border-box;
@@ -337,6 +409,52 @@
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+}
+
+.ie .content-l_col-1-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-1-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-1-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-1-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
 }
 
 .ie .content-l_col-1-3 {
@@ -405,6 +523,52 @@
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-2-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-2-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-2-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 66.66666667%;
+}
+
+.ie .content-l_col-2-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-2-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-2-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
   width: 66.66666667%;
 }
 
@@ -429,6 +593,52 @@
   margin-right: -0.25em;
   vertical-align: top;
   width: 100%;
+}
+
+.ie .content-l_col-3-8 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-3-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-3-8 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-3-8 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-3-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-3-8 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 37.5%;
 }
 
 .ie .content-l_col-3-8 {
@@ -497,6 +707,29 @@
   border-width: 0 15px;
   margin-right: -0.25em;
   vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-5-8 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-5-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-5-8 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
   width: 62.5%;
 }
 
@@ -505,6 +738,52 @@
 }
 
 .lt-ie8 .content-l_col-5-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-5-8 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 62.5%;
+}
+
+.ie .content-l_col-5-8 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-5-8 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col__stack-on-cols {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col__stack-on-cols {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col__stack-on-cols {
   display: inline;
   margin-right: 0;
   zoom: 1;
@@ -613,6 +892,36 @@
 }
 
 .content-l_col__before-divider.content-l_col-1-2:before {
+  content: &quot;&quot;;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  display: block;
+  background-color: #babbbd;
+  margin-left: -45px;
+}
+
+.content-l_col__before-divider.content-l_col-1-2 {
+  padding-left: 30px;
+}
+
+.content-l_col__before-divider.content-l_col-1-2:before {
+  content: &quot;&quot;;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  display: block;
+  background-color: #babbbd;
+  margin-left: -45px;
+}
+
+.content-l_col__before-divider.content-l_col-1-3 {
+  padding-left: 30px;
+}
+
+.content-l_col__before-divider.content-l_col-1-3:before {
   content: &quot;&quot;;
   position: absolute;
   top: 0;
@@ -1130,6 +1439,42 @@ main.content
 .content_intro,
 .content_main,
 .content_sidebar {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+  padding: 3.75em 0.9375em;
+}
+
+.ie .content_intro,
+.ie .content_main,
+.ie .content_sidebar {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content_intro,
+.lt-ie8 .content_main,
+.lt-ie8 .content_sidebar {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content_intro,
+.content_main,
+.content_sidebar {
+  padding: 3.75em 0;
+}
+
+.content_intro,
+.content_main,
+.content_sidebar {
   padding: 3.75em 0;
 }
 
@@ -1150,6 +1495,137 @@ main.content
 }
 
 .lt-ie8 .content_intro {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content_intro {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content_intro {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content_intro {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__1-3 .content_sidebar {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 25%;
+  padding-right: 1.875em;
+}
+
+.ie .content__1-3 .content_sidebar {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content__1-3 .content_sidebar {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__1-3 .content_main {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 75%;
+  position: relative;
+}
+
+.ie .content__1-3 .content_main {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content__1-3 .content_main {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__1-3 .content_main:after {
+  content: '';
+  border-left: 1px solid #babbbd;
+  position: absolute;
+  top: 3.75em;
+  bottom: 0;
+  left: -1.875em;
+}
+
+.content__2-1 .content_main {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 66.66666667%;
+}
+
+.ie .content__2-1 .content_main {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content__2-1 .content_main {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content__2-1 .content_main:after {
+  right: -1.875em;
+}
+
+.content__2-1 .content_sidebar {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
+  padding-left: 1.875em;
+}
+
+.ie .content__2-1 .content_sidebar {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content__2-1 .content_sidebar {
   display: inline;
   margin-right: 0;
   zoom: 1;
@@ -1604,6 +2080,11 @@ Main content...
   margin-left: -30px;
 }
 
+.content_block__flush-sides {
+  margin-right: -30px;
+  margin-left: -30px;
+}
+
 .content_block__bg {
   padding: 1.875em 0.9375em;
   background: #f1f2f2;
@@ -1613,9 +2094,18 @@ Main content...
   padding: 2.8125em 1.875em;
 }
 
+.content_block__bg {
+  padding: 2.8125em 1.875em;
+}
+
 .content_block__sub {
   margin-top: 1.875em;
   margin-bottom: 1.875em;
+}
+
+.content-l_col.content_block,
+.content-l_col.content_block__sub {
+  margin-top: 0;
 }
 
 .content-l_col.content_block,
@@ -1720,6 +2210,44 @@ Main content...
 .content__bleedbar .content_sidebar {
   padding: 1.875em 0.9375em;
   background: #f1f2f2;
+}
+
+.content__bleedbar {
+  overflow: hidden;
+}
+
+.content__bleedbar .content_sidebar {
+  padding: 3.75em 0 0.9375em 1.875em;
+  margin-left: 0;
+  position: relative;
+  z-index: 1;
+  background: transparent;
+}
+
+.lt-ie8 .content__bleedbar .content_sidebar {
+  padding-right: 30px;
+  background: #f1f2f2;
+}
+
+.content__bleedbar .content_wrapper:after {
+  content: '';
+  display: block;
+  width: 9999px;
+  border-left: 1px solid #babbbd;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 0;
+  margin-left: 10px;
+  background: #f1f2f2;
+}
+
+.content__bleedbar.content__2-1 .content_wrapper:after {
+  left: 66.666666667%;
+}
+
+.content__bleedbar.content__3-1 .content_wrapper:after {
+  left: 75%;
 }
 
 .content__bleedbar {
