--- a/static/css/contact-us.less
+++ b/static/css/contact-us.less
@@ -5,7 +5,7 @@
 
 .contact-us-map {
     max-width: 330px;
-    .u-respond-to-range(600px, 801px, {
+    .respond-to-range(600px, 801px, {
         float: right;            
     });
 }
