--- a/static/css/main.less
+++ b/static/css/main.less
@@ -26,9 +26,10 @@
     }
 
     &.chosen-container-multi .chosen-choices li.search-field input[type=text] {
+        width: 90% !important;
         height: auto;
         margin: 0;
-        padding: unit(4px / @base-font-size-px, em);
+        padding: unit(6px / @base-font-size-px, em);
         color: @gray;
     }
 
@@ -95,7 +96,6 @@ img {
 /* Project-specific styles
    ========================================================================== */
 
-@import (less) "utilities.less";
 @import (less) "cf-enhancements.less";
 @import (less) "layout.less";
 @import (less) "nav-secondary.less";
