--- a/static/css/meta.less
+++ b/static/css/meta.less
@@ -76,7 +76,7 @@
 .tags {
     @bp: 480px;
 
-    .u-respond-to-min(@bp, {
+    .respond-to-min(@bp, {
         position: relative;
         // 58px here comes from the .tags_header width.
         padding-left: unit((58px + 8px) / @base-font-size-px, em);
@@ -88,7 +88,7 @@
         margin: 0 0 unit(16px / @font-size, em);
         color: @black;
 
-        .u-respond-to-min(@bp, {
+        .respond-to-min(@bp, {
             position: absolute;
             left: 0;
             width: unit(58px / @font-size, em);
@@ -101,7 +101,7 @@
         border-top: 1px dotted @gold-80;
         list-style-type: none;
 
-        .u-respond-to-min(@bp, {
+        .respond-to-min(@bp, {
             border-top: none;
         });
     }
@@ -110,7 +110,7 @@
         border-bottom: 1px dotted @gold-80;
         line-height: 1;
 
-        .u-respond-to-min(@bp, {
+        .respond-to-min(@bp, {
             .u-inline-block();
             margin-right: unit(15px / @base-font-size-px, em);
             // Eyeballed to be 15px of vertical space between each.
@@ -134,11 +134,11 @@
         .u-link__colors(@gray, @gray, @gray, @gray, @gray,
                         @gold-80, @gold-80, @gold-80, @gold-80, @gold-80);
 
-        .u-respond-to-max((@bp - 1), {
+        .respond-to-max((@bp - 1), {
             .u-link__no-border();
         });
 
-        .u-respond-to-min(@bp, {
+        .respond-to-min(@bp, {
             padding: 0;
         });
     }
@@ -442,7 +442,7 @@
 .meta-header_right {
     display: block;
     margin-bottom: 0;
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .u-right();
         display: inline-block;
     });
