--- a/_layouts/post-filters.html
+++ b/_layouts/post-filters.html
@@ -2,13 +2,13 @@
 <div class="expandable">
     <div class="expandable_header expandable_header__spaced">
         <div class="expandable_header-right expandable_header-right__float-on-medium">
-            <button class="expandable_target expandable_target__btn-secondary">
+            <button class="expandable_target expandable_target__btn__secondary">
                 Filter posts
                 <span class="expandable_cue-open">
-                    <span class="btn-icon-right cf-icon cf-icon-down"></span>
+                    <span class="btn_icon__right cf-icon cf-icon-down"></span>
                 </span>
                 <span class="expandable_cue-close">
-                    <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                    <span class="btn_icon__right cf-icon cf-icon-up"></span>
                 </span>
             </button>
         </div>
