--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -47,6 +47,15 @@
     clear: both;
   }
 }
+@media only all and (min-width: 50.0625em) {
+  .wrapper {
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+    position: relative;
+    clear: both;
+  }
+}
 .lt-ie9 .wrapper {
   max-width: 960px;
 }
@@ -263,8 +272,21 @@
     margin-right: -15px;
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content-l {
+    display: block;
+    position: relative;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+}
 .content-l_col + .content-l_col {
   margin-top: 1.875em;
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col.content-l_col-1-2 + .content-l_col.content-l_col-1-2 {
+    margin-top: 0;
+  }
 }
 @media only all and (min-width: 37.5em) {
   .content-l_col.content-l_col-1-2 + .content-l_col.content-l_col-1-2 {
@@ -277,6 +299,36 @@
   .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
   .content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
     margin-top: 0;
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col.content-l_col-1-3 + .content-l_col.content-l_col-1-3,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-3-8,
+  .content-l_col.content-l_col-3-8 + .content-l_col.content-l_col-5-8,
+  .content-l_col.content-l_col-5-8 + .content-l_col.content-l_col-3-8 {
+    margin-top: 0;
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col-1 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col-1 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-1 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
 @media only all and (min-width: 37.5em) {
@@ -324,6 +376,28 @@
   }
 }
 @media only all and (min-width: 37.5em) {
+  .content-l_col-1-2 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 50%;
+  }
+  .ie .content-l_col-1-2 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-1-2 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 37.5em) {
   .content-l_col-1-3 {
     display: inline-block;
     -webkit-box-sizing: border-box;
@@ -334,6 +408,50 @@
     margin-right: -0.25em;
     vertical-align: top;
     width: 100%;
+  }
+  .ie .content-l_col-1-3 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-1-3 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col-1-3 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col-1-3 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-1-3 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col-1-3 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 33.33333333%;
   }
   .ie .content-l_col-1-3 {
     margin-right: -0.26em;
@@ -389,6 +507,50 @@
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content-l_col-2-3 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col-2-3 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-2-3 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col-2-3 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 66.66666667%;
+  }
+  .ie .content-l_col-2-3 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-2-3 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
 @media only all and (min-width: 48em) {
   .content-l_col-2-3 {
     display: inline-block;
@@ -422,6 +584,50 @@
     margin-right: -0.25em;
     vertical-align: top;
     width: 100%;
+  }
+  .ie .content-l_col-3-8 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-3-8 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col-3-8 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col-3-8 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-3-8 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col-3-8 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 37.5%;
   }
   .ie .content-l_col-3-8 {
     margin-right: -0.26em;
@@ -477,6 +683,28 @@
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content-l_col-5-8 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col-5-8 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-5-8 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
 @media only all and (min-width: 48em) {
   .content-l_col-5-8 {
     display: inline-block;
@@ -493,6 +721,50 @@
     margin-right: -0.26em;
   }
   .lt-ie8 .content-l_col-5-8 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col-5-8 {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 62.5%;
+  }
+  .ie .content-l_col-5-8 {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col-5-8 {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .content-l_col__stack-on-cols {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content-l_col__stack-on-cols {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content-l_col__stack-on-cols {
     display: inline;
     margin-right: 0;
     zoom: 1;
@@ -603,6 +875,30 @@
     background-color: #babbbd;
   }
 }
+@media only all and (max-width: 37.4375em) {
+  .content-l_col__before-divider.content-l_col-1-2:before {
+    content: &quot;&quot;;
+    display: block;
+    height: 1px;
+    margin-bottom: 1.875em;
+    background-color: #babbbd;
+  }
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col__before-divider.content-l_col-1-2 {
+    padding-left: 30px;
+  }
+  .content-l_col__before-divider.content-l_col-1-2:before {
+    content: &quot;&quot;;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    display: block;
+    background-color: #babbbd;
+    margin-left: -45px;
+  }
+}
 @media only all and (min-width: 37.5em) {
   .content-l_col__before-divider.content-l_col-1-2 {
     padding-left: 30px;
@@ -625,6 +921,30 @@
     height: 1px;
     margin-bottom: 1.875em;
     background-color: #babbbd;
+  }
+}
+@media only all and (max-width: 47.9375em) {
+  .content-l_col__before-divider.content-l_col-1-3:before {
+    content: &quot;&quot;;
+    display: block;
+    height: 1px;
+    margin-bottom: 1.875em;
+    background-color: #babbbd;
+  }
+}
+@media only all and (min-width: 48em) {
+  .content-l_col__before-divider.content-l_col-1-3 {
+    padding-left: 30px;
+  }
+  .content-l_col__before-divider.content-l_col-1-3:before {
+    content: &quot;&quot;;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    display: block;
+    background-color: #babbbd;
+    margin-left: -45px;
   }
 }
 @media only all and (min-width: 48em) {
@@ -1124,6 +1444,42 @@ main.content
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content_intro,
+  .content_main,
+  .content_sidebar {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+    padding: 3.75em 0.9375em;
+  }
+  .ie .content_intro,
+  .ie .content_main,
+  .ie .content_sidebar {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content_intro,
+  .lt-ie8 .content_main,
+  .lt-ie8 .content_sidebar {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .content_intro,
+  .content_main,
+  .content_sidebar {
+    padding: 3.75em 0;
+  }
+}
 @media only all and (min-width: 50.0625em) {
   .content_intro,
   .content_main,
@@ -1147,6 +1503,124 @@ main.content
     margin-right: -0.26em;
   }
   .lt-ie8 .content_intro {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .content_intro {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 100%;
+  }
+  .ie .content_intro {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content_intro {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+}
+@media only all and (min-width: 50.0625em) {
+  .content__1-3 .content_sidebar {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 25%;
+    padding-right: 1.875em;
+  }
+  .ie .content__1-3 .content_sidebar {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content__1-3 .content_sidebar {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .content__1-3 .content_main {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 75%;
+    position: relative;
+  }
+  .ie .content__1-3 .content_main {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content__1-3 .content_main {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .content__1-3 .content_main:after {
+    content: '';
+    border-left: 1px solid #babbbd;
+    position: absolute;
+    top: 3.75em;
+    bottom: 0;
+    left: -1.875em;
+  }
+  .content__2-1 .content_main {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 66.66666667%;
+  }
+  .ie .content__2-1 .content_main {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content__2-1 .content_main {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .content__2-1 .content_main:after {
+    right: -1.875em;
+  }
+  .content__2-1 .content_sidebar {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 33.33333333%;
+    padding-left: 1.875em;
+  }
+  .ie .content__2-1 .content_sidebar {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content__2-1 .content_sidebar {
     display: inline;
     margin-right: 0;
     zoom: 1;
@@ -1275,12 +1749,49 @@ main.content
     padding-right: 0;
   }
 }
+@media only all and (min-width: 64em) {
+  .content__2-1 .content_main__narrow {
+    display: inline-block;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    border: solid transparent;
+    border-width: 0 15px;
+    margin-right: -0.25em;
+    vertical-align: top;
+    width: 66.66666667%;
+    padding-right: 8.33333333%;
+  }
+  .ie .content__2-1 .content_main__narrow {
+    margin-right: -0.26em;
+  }
+  .lt-ie8 .content__2-1 .content_main__narrow {
+    display: inline;
+    margin-right: 0;
+    zoom: 1;
+    behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  }
+  .lt-ie8 .content__2-1 .content_main__narrow {
+    padding-right: 0;
+  }
+}
 .content__flush-bottom {
   padding-bottom: 0;
 }
 @media only all and (max-width: 50em) {
   .content__flush-top-on-small {
     padding-top: 0;
+  }
+}
+@media only all and (max-width: 50em) {
+  .content__flush-top-on-small {
+    padding-top: 0;
+  }
+}
+@media only all and (max-width: 50em) {
+  .content__flush-all-on-small {
+    padding: 0;
+    border-width: 0;
   }
 }
 @media only all and (max-width: 50em) {
@@ -1621,6 +2132,12 @@ Main content...
     margin-left: -30px;
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content_block__flush-sides {
+    margin-right: -30px;
+    margin-left: -30px;
+  }
+}
 .content_block__bg {
   padding: 1.875em 0.9375em;
   background: #f1f2f2;
@@ -1630,9 +2147,20 @@ Main content...
     padding: 2.8125em 1.875em;
   }
 }
+@media only all and (min-width: 37.5em) {
+  .content_block__bg {
+    padding: 2.8125em 1.875em;
+  }
+}
 .content_block__sub {
   margin-top: 1.875em;
   margin-bottom: 1.875em;
+}
+@media only all and (min-width: 37.5em) {
+  .content-l_col.content_block,
+  .content-l_col.content_block__sub {
+    margin-top: 0;
+  }
 }
 @media only all and (min-width: 37.5em) {
   .content-l_col.content_block,
@@ -1733,6 +2261,40 @@ Main content...
 .content__bleedbar .content_sidebar {
   padding: 1.875em 0.9375em;
   background: #f1f2f2;
+}
+@media only all and (min-width: 50.0625em) {
+  .content__bleedbar {
+    overflow: hidden;
+  }
+  .content__bleedbar .content_sidebar {
+    padding: 3.75em 0 0.9375em 1.875em;
+    margin-left: 0;
+    position: relative;
+    z-index: 1;
+    background: transparent;
+  }
+  .lt-ie8 .content__bleedbar .content_sidebar {
+    padding-right: 30px;
+    background: #f1f2f2;
+  }
+  .content__bleedbar .content_wrapper:after {
+    content: '';
+    display: block;
+    width: 9999px;
+    border-left: 1px solid #babbbd;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: 0;
+    margin-left: 10px;
+    background: #f1f2f2;
+  }
+  .content__bleedbar.content__2-1 .content_wrapper:after {
+    left: 66.666666667%;
+  }
+  .content__bleedbar.content__3-1 .content_wrapper:after {
+    left: 75%;
+  }
 }
 @media only all and (min-width: 50.0625em) {
   .content__bleedbar {
