--- a/static/css/demo.less
+++ b/static/css/demo.less
@@ -10,7 +10,7 @@
     color: @white;
     .webfont-regular();
 
-    .u-respond-to-max(599px, {
+    .respond-to-max(599px, {
         font-size: 0.875em;
     });
 }
@@ -31,7 +31,7 @@
         color: @gray-50;
     }
 
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         padding: 0;
         float: left;
     });
@@ -40,7 +40,7 @@
 .demo-banner b {
     .webfont-medium();
 
-    .u-respond-to-max(599px, {
+    .respond-to-max(599px, {
         display: block;
     });
 }
@@ -68,7 +68,7 @@
 }
 
 .demo-cols {
-    .u-respond-to-min(480px, {
+    .respond-to-min(480px, {
         .grid_nested-col-group();
     });
 }
@@ -79,7 +79,7 @@
 
 .demo-col-6 {
     .grid_column(12);
-    .u-respond-to-min(480px, {
+    .respond-to-min(480px, {
         .grid_column(6);
     });
 }
@@ -89,7 +89,7 @@
     // Temporary styling to bring in line with main columns.
     margin: (@grid_gutter-width / 2);
 
-    .u-respond-to-range(600px, 800px, {
+    .respond-to-range(600px, 800px, {
         margin: @grid_gutter-width;
     });
 }
