--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -21,7 +21,7 @@
 */
 
 .wrapper {
-    .u-respond-to-min(801px, {
+    .respond-to-min(801px, {
         .grid_wrapper();
     });
 }
@@ -154,7 +154,7 @@
     // Used to position __divider modifiers
     position: relative;
 
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_nested-col-group();
     });
 }
@@ -163,12 +163,12 @@
     & + & {
         margin-top: unit(@grid_gutter-width / @base-font-size-px, em);
     }
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         &.content-l_col-1-2 + &.content-l_col-1-2 {
             margin-top: 0;
         }
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         &.content-l_col-1-3 + &.content-l_col-1-3,
         &.content-l_col-3-8 + &.content-l_col-3-8,
         &.content-l_col-3-8 + &.content-l_col-5-8,
@@ -179,55 +179,55 @@
 }
 
 .content-l_col-1 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
     });
 }
 
 .content-l_col-1-2 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(6);
     });
 }
 
 .content-l_col-1-3 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         .grid_column(4);
     });
 }
 
 .content-l_col-2-3 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         .grid_column(8);
     });
 }
 
 .content-l_col-3-8 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         .grid_column(3, 8);
     });
 }
 
 .content-l_col-5-8 {
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         .grid_column(5, 8);
     });
 }
 
 .content-l_col__stack-on-cols {
-    .u-respond-to-min(801px, {
+    .respond-to-min(801px, {
         .grid_column(12);
     });
 }
@@ -282,19 +282,19 @@
 */
 
 .content-l_col__before-divider.content-l_col-1-2 {
-    .u-respond-to-max(599px {
+    .respond-to-max(599px {
         .grid_column__top-divider();
     });
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column__left-divider();
     });
 }
 
 .content-l_col__before-divider.content-l_col-1-3 {
-    .u-respond-to-max(767px {
+    .respond-to-max(767px {
         .grid_column__top-divider();
     });
-    .u-respond-to-min(768px, {
+    .respond-to-min(768px, {
         .grid_column__left-divider();
     });
 }
@@ -570,26 +570,26 @@
     padding: unit(@grid_gutter-width / @base-font-size-px, em)
              unit((@grid_gutter-width / 2) / @base-font-size-px, em);
 
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .grid_column(12);
         padding: unit((@grid_gutter-width * 2) / @base-font-size-px, em)
                  unit((@grid_gutter-width / 2) / @base-font-size-px, em);
     });
 
-    .u-respond-to-min(801px, {
+    .respond-to-min(801px, {
         padding: unit((@grid_gutter-width * 2) / @base-font-size-px, em)
                  0;
     });
 }
 
-.u-respond-to-min(801px, {
+.respond-to-min(801px, {
     .content_intro {
         .grid_column(12);
     }
 });
 
 // Set up standard multi-column content area layouts
-.u-respond-to-min(801px, {
+.respond-to-min(801px, {
     .content {
         &__1-3 {
             .content_sidebar {
@@ -629,7 +629,7 @@
     }
 }); // END min-width 801 block
 
-.u-respond-to-min(1024px, {
+.respond-to-min(1024px, {
     .content {
         &__2-1 {
             .content_main__narrow {
@@ -644,13 +644,13 @@
 }
 
 .content__flush-top-on-small {
-    .u-respond-to-max(800px, {
+    .respond-to-max(800px, {
         padding-top: 0;
     });
 }
 
 .content__flush-all-on-small {
-    .u-respond-to-max(800px, {
+    .respond-to-max(800px, {
         padding: 0;
         border-width: 0;
     });
@@ -824,7 +824,7 @@
     &__flush-sides {
         margin-right: -(@grid_gutter-width / 2);
         margin-left: -(@grid_gutter-width / 2);
-        .u-respond-to-min(600px, {
+        .respond-to-min(600px, {
             margin-right: -@grid_gutter-width;
             margin-left: -@grid_gutter-width;
         });
@@ -834,7 +834,7 @@
         padding: unit(@grid_gutter-width / @base-font-size-px, em)
                  unit((@grid_gutter-width / 2) / @base-font-size-px, em);
         background: @gray-10;
-        .u-respond-to-min(600px, {
+        .respond-to-min(600px, {
             padding: unit(45 / @base-font-size-px, em)
                      unit(@grid_gutter-width / @base-font-size-px, em);
         });
@@ -848,7 +848,7 @@
     // Overrides for when .content_block is also a column
     .content-l_col&,
     .content-l_col&__sub {
-        .u-respond-to-min(600px, {
+        .respond-to-min(600px, {
             margin-top: 0;
         });
     }
@@ -924,7 +924,7 @@
         background: @gray-10;
     }
 
-    .u-respond-to-min(801px, {
+    .respond-to-min(801px, {
         // Prevent pseudo element background from creating horizontal scrollbar.
         overflow: hidden;
 
