--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -138,7 +138,7 @@
     &_item {
         list-style: none;
 
-        .u-respond-to-min(801px, {
+        .respond-to-min(801px, {
             & + & {
                 margin-top: 1px;
             }
@@ -149,7 +149,7 @@
         @font-size-small: 16px;
         @font-size-large: 18px;
 
-        .u-respond-to-max(800px, {
+        .respond-to-max(800px, {
             display: block;
             // width: 100%; // Needed to override button styles
             padding: unit((@grid_gutter-width / 2) / @font-size-small, em)
@@ -165,12 +165,12 @@
             text-align: left; // Needed to override button styles
         });
 
-        .u-respond-to-max(600px, {
+        .respond-to-max(600px, {
             padding-left: unit((@grid_gutter-width / 2) / @font-size-small, em);
             padding-right: unit((@grid_gutter-width / 2) / @font-size-small, em);
         });
 
-        .u-respond-to-min(801px, {
+        .respond-to-min(801px, {
             display: inline-block;
             padding: unit(10px / @font-size-large, em);
             border-left-style: solid;
@@ -183,10 +183,10 @@
         });
 
         &__current {
-            .u-respond-to-max(800px, {
+            .respond-to-max(800px, {
                 display: none;
             });
-            .u-respond-to-min(801px, {
+            .respond-to-min(801px, {
                 .u-link__colors(@black, @black, @black, @black, @black,
                                 @green, @green, @green, @green, @green);
             });
@@ -202,7 +202,7 @@
                 outline: thin dotted;
             }
 
-            .u-respond-to-min(801px, {
+            .respond-to-min(801px, {
                 display: none;
             });
         }
