--- a/static/css/summary.less
+++ b/static/css/summary.less
@@ -47,7 +47,7 @@
         .h3();
         // Eyeballed to 20px from the baseline.
         margin-bottom: unit(10px / @font-size, em);
-        .u-respond-to-min(600px, {
+        .respond-to-min(600px, {
             .h2();
             // Eyeballed to 20px from the baseline.
             margin-bottom: unit(9px / @font-size, em);
@@ -112,7 +112,7 @@
     margin-top: unit(20px / @base-font-size-px, em);
 }
 
-.u-respond-to-min(600px, {
+.respond-to-min(600px, {
     .summary_cols {
         .grid_nested-col-group();
     }
@@ -168,7 +168,7 @@
     .h2();
     // Eyeballed to 30px from the baseline.
     margin-bottom: unit(16px / @font-size, em);
-    .u-respond-to-min(600px, {
+    .respond-to-min(600px, {
         .h1();
         // Eyeballed to 25px from the baseline.
         margin-bottom: unit(11px / @font-size, em);
