--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -2368,6 +2368,11 @@ figure {
   margin-bottom: 1.25em;
 }
 
+figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 /* topdoc
   name: Default link
   notes:
@@ -4073,6 +4078,11 @@ table,
 figure {
   margin-top: 0;
   margin-bottom: 1.25em;
+}
+
+figure {
+  margin-left: 0;
+  margin-right: 0;
 }
 
 /* topdoc
@@ -6260,8 +6270,8 @@ textarea.success {
   margin-top: 1.875em;
 }
 
-.form-group_item {
-  margin-bottom: 0.9375em;
+.form-group_item + .form-group_item {
+  margin-top: 0.9375em;
 }
 
 /* topdoc
